# wit-bindgen-test

./: Cargo.toml
src/: lib.rs
