[package]
name = "wit-bindgen-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# Works:
#wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", tag="wit-bindgen-0.6.0" }
# Do not work:
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", tag="wit-bindgen-0.7.0" }
#wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", branch="main" }